# Nautyyy

./: .gitignore.txt  CMakeLists.txt  README.md  adjacencymatrix.cpp  adjacencymatrix.h  main.cpp  nautyyy.cpp  nautyyy.h  notes.txt  partition and refinement.cpp  partition and refinement.h  permutation group.cpp  permutation group.h  sparse_graph.cpp  sparse_graph.h
Graphs/: test12_1.txt  test12_2.txt  test13_2.txt  test14_2.txt  test15_1.txt  test15_2.txt  test16_2.txt  test17_1.txt  test17_2.txt  test18_1.txt  test18_2.txt  test19_2.txt  test20_1.txt  test20_2.txt  test21_2.txt  test22_2.txt  test23_1.txt  test23_2.txt  test26_1.txt  test26_2.txt  test2_1.txt  test3_1.txt  test3_2.txt  test4_2.txt  test5_1.txt  test5_2.txt  test7.txt  test7_1.txt  test8_1.txt
Graphs/mz/: mz-10  mz-12  mz-14  mz-16  mz-18  mz-2  mz-20  mz-22  mz-24  mz-26  mz-28  mz-30  mz-32  mz-34  mz-36  mz-38  mz-4  mz-40  mz-42  mz-44  mz-46  mz-48  mz-50  mz-6  mz-8
Graphs/mz-aug2/: mz-aug2-10  mz-aug2-12  mz-aug2-14  mz-aug2-16  mz-aug2-18  mz-aug2-20  mz-aug2-22  mz-aug2-24  mz-aug2-26  mz-aug2-28  mz-aug2-30  mz-aug2-32  mz-aug2-34  mz-aug2-36  mz-aug2-38  mz-aug2-4  mz-aug2-40  mz-aug2-42  mz-aug2-44  mz-aug2-46  mz-aug2-48  mz-aug2-50  mz-aug2-6  mz-aug2-8
Graphs/pp/: pp-11-1  pp-13-1  pp-16-1  pp-16-10  pp-16-11  (+238 more)
Resources/: test.txt  test10_1.txt  test11_2.txt  test13_1.txt  test14_1.txt  test16_1.txt  test19_1.txt  test21_1.txt  test22_1.txt  test24_1.txt  test25_1.txt  test25_2.txt  test2_2.txt  test4_1.txt  test6.txt  test6_1.txt  test6_2.txt  test7_2.txt  test8_2.txt  test9_2.txt
